Some Correction in Border Radius and Spacing.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,8 +29,8 @@ header
     background-image: url(../Assets/Hero-bg.png);    
     max-width: 100%;
     background-color: aquamarine;
-    min-height: 550px;
-    max-height: 700px;
+    min-height: 600px;
+    max-height: 750px;
     /* background-repeat: no-repeat; */
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -342,12 +342,14 @@ button a
     width: 497px;
     border-radius: 5px;
     display: block;
+    font-size: 16px;
 }
 
 .contact-right button
 {
     width: 507px;
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .btn-submit
@@ -384,6 +386,7 @@ footer
     font-size: 100px;
     color: #4E47FF;
     margin-bottom: 0%;
+    font-weight: bolder;
 }
 
 .foot-foot
